Adapter bug fixes
> Refractured code
> Tested against another xml & xsd combo
> Fixed dupes in xsd and generated adapter